--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = ""
 authors = ["Abhishek Kumar <iamabhi6345@gmail.com>"]
 readme = "README.md"
 
-
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
 hydra-core = "~=1.3.2"
@@ -13,11 +12,11 @@ pydantic = "~=1.10.7"
 pandas = "~=2.0"
 nltk = "~=3.8"
 symspellpy = "~=6.7"
-fsspec = {version = "~=2023.5", extras = ["gcs"]}
-gcsfs = "~=2023.5"
+fsspec = {version = "~=2024.6", extras = ["gcs"]}
+gcsfs = ">=2024.6"
 google-cloud-secret-manager = "~=2.16"
 fastparquet = "~=2023.4"
-dvc = {version = "~=2.56", extras = ["gdrive", "gs"]}
+dvc = { version = "^3.51.2", extras = ["gdrive", "gs"] }
 dask = {version = "~=2023.5", extras = ["complete"]}
 distributed = "~=2023.5"
 dask-cloudprovider = {version = "2022.10", extras=["gcp"]}
@@ -37,17 +36,16 @@ black = "~=23.3"
 isort = "~=5.12"
 flake8 = "~=6.0"
 mypy = "~=1.2"
-
-types-PyYAML = "~=6.0.12.10" 
-types-decorator = "~=5.1.8.3" 
-types-paramiko = "~=3.0.0.10" 
-types-protobuf = "~=4.23.0.1" 
-types-pyOpenSSL = "~=23.1.0.3" 
-types-python-dateutil = "~=2.8.19.13" 
-types-requests = "~=2.30.0.0" 
-types-setuptools = "~=67.8.0.0" 
-types-six = "~=1.16.21.8" 
-types-typed-ast = "~=1.5.8.6" 
+types-PyYAML = "~=6.0.12.10"
+types-decorator = "~=5.1.8.3"
+types-paramiko = "~=3.0.0.10"
+types-protobuf = "~=4.23.0.1"
+types-pyOpenSSL = "~=23.1.0.3"
+types-python-dateutil = "~=2.8.19.13"
+types-requests = "~=2.30.0.0"
+types-setuptools = "~=67.8.0.0"
+types-six = "~=1.16.21.8"
+types-typed-ast = "~=1.5.8.6"
 types-urllib3 = "~=1.26.25.13"
 
 [build-system]
@@ -79,21 +77,17 @@ install_types = true
 non_interactive = true
 follow_imports = "silent"
 no_strict_optional = true
-
 warn_redundant_casts = false
 warn_unused_ignores = true
 warn_unused_configs = true
 warn_return_any = true
 warn_no_return = true
 warn_incomplete_stub = true
-
 disallow_subclassing_any = true
-
 disallow_untyped_calls = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_decorators = true
 check_untyped_defs = true
 strict_optional = true
-
 verbosity = 0
