--- a/abhishek/configs/data_processing_config.yaml
+++ b/abhishek/configs/data_processing_config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - config_schema
+  - data_processing_config_schema
 
   - override hydra/job_logging: custom
   - override hydra/hydra_logging: disabled
@@ -9,4 +9,6 @@ hydra:
   output_subdir: null
   run:
     dir: .
-    
+  
+
+version: v1
