--- a/abhishek/configs/dataset_reader_manager/ghc_jigsaw_twitter.yaml
+++ b/abhishek/configs/dataset_reader_manager/ghc_jigsaw_twitter.yaml
@@ -2,7 +2,7 @@ defaults:
   - dataset_reader_manager_schema
   - dataset_reader@dataset_readers.ghc: ghc
   - dataset_reader@dataset_readers.jtc: jtc
-  # - dataset_reader@dataset_readers.twitter: twitter
+  - dataset_reader@dataset_readers.twitter: twitter
 
 # available_memory: null
 
