--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ types-setuptools = "~=67.8.0.0"
 types-six = "~=1.16.21.8"
 types-typed-ast = "~=1.5.8.6"
 types-urllib3 = "~=1.26.25.13"
+types-cachetools= "~5.3.0.7" 
+types-pycurl= "~7.45.3.20240421"
 
 [build-system]
 requires = ["poetry-core"]
