--- a/abhishek/configs/automatically_generated/data_processing_config.yaml
+++ b/abhishek/configs/automatically_generated/data_processing_config.yaml
@@ -15,16 +15,31 @@ dataset_reader_manager:
       _target_: abhishek.data_processing.dataset_readers.GHCDatasetReader
       dataset_dir: ./data/raw/ghc
       dataset_name: ghc
+      gcp_project_id: cyberbullying-428016
+      gcp_github_access_token_secret_id: abhishek-data-github-access-token
+      dvc_remote_repo: https://github.com/iamabhi6345/cyber_bullying_detection_dvc.git
+      github_user_name: iamabhi6345
+      version: v3
       dev_split_ratio: 0.3
     jtc:
       _target_: abhishek.data_processing.dataset_readers.JigsawToxicCommentsDatasetReader
       dataset_dir: ./data/raw/jogsaw-toxic-comments
       dataset_name: jtc
+      gcp_project_id: cyberbullying-428016
+      gcp_github_access_token_secret_id: abhishek-data-github-access-token
+      dvc_remote_repo: https://github.com/iamabhi6345/cyber_bullying_detection_dvc.git
+      github_user_name: iamabhi6345
+      version: v3
       dev_split_ratio: 0.06
     twitter:
       _target_: abhishek.data_processing.dataset_readers.TwitterDatasetReader
       dataset_dir: ./data/raw/twitter
       dataset_name: twitter
+      gcp_project_id: cyberbullying-428016
+      gcp_github_access_token_secret_id: abhishek-data-github-access-token
+      dvc_remote_repo: https://github.com/iamabhi6345/cyber_bullying_detection_dvc.git
+      github_user_name: iamabhi6345
+      version: v3
       dev_split_ratio: 0.25
       test_split_ratio: 0.2
   repartition: true
@@ -76,4 +91,4 @@ dask_cluster:
   worker_class: null
 processed_data_save_dir: ./data/processed
 docker_image_name: asia-south1-docker.pkg.dev/cyberbullying-428016/abhishek/abhishek-data-processing
-docker_image_tag: 1654b90d-3cfc-4bea-9290-3b61f1e14155
+docker_image_tag: ed1d9008-b9b6-4425-9b16-b97763842d62
