--- a/abhishek/configs/data_processing_config.yaml
+++ b/abhishek/configs/data_processing_config.yaml
@@ -18,4 +18,6 @@ hydra:
 
 version: v3
 
-processed_data_save_dir: ./data/processed 
+# processed_data_save_dir: ./data/processed 
+processed_data_save_dir: gs://cyberbullying45/data/processed/{run_tag}
+
