--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     image: abhishek-data-processing
     platform: linux/amd64
     container_name: abhishek-data-processing-container
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=./creds/cyberbullying-428016-9e4eabf320ad.json
     build:
       context: .
       dockerfile: ./docker/Dockerfile
